Fixes for "new tweet" text visible on (+) hover and css issues for the post form on very narrow screens. #19310619 and #19310675

--- a/mods/redsquare/web/style.css
+++ b/mods/redsquare/web/style.css
@@ -64,6 +64,10 @@
     right: 2rem;
   }
 
+  div#redsquare-tweet:hover {
+    color: transparent;
+  }
+
   div#redsquare-tweet::after {
     content: "\002B";
     position: absolute;
